--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Handleliste</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?famliy=Titillium+web"> 
-	<link rel="stylesheet" href="https://github.com/Holterminator/Holterminatorres/blob/master/font-awesome.css"> 
-	<link rel="stylesheet" href="https://github.com/Holterminator/Holterminatorres/blob/master/styles.css">
+	<link rel="stylesheet" href="font-awesome.css"> 
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
  <div class="container">
@@ -30,7 +30,7 @@
  	</div>
  </div>
 
-<script src="https://github.com/Holterminator/Holterminatorres/blob/master/app.js" type="text/javascript"></script>
+<script src="app.js" type="text/javascript"></script>
 </body>
 
 
