--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
  <div class="container">
  	<div class="header">
+		<div class="mainTitle">
+		<h1>Handleliste</h1>
+	</div>
  		<div class="clear">
  			<i class="fa fa-refresh"></i>
  		</div>
