--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype HTML>
 <html lang="nb-NO">
 <head>
-	<title>Handleliste</title>
+	<title>Huskeliste</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?famliy=Titillium+web"> 
 	<link rel="stylesheet" href="font-awesome.css"> 
 	<link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
  <div class="container">
  	<div class="header">
 		<div class="mainTitle">
-		<h1>Handleliste</h1>
+		<h1>Huskeliste</h1>
 		</div>
  		<div class="clear">
  			<i class="fa fa-refresh"></i>
@@ -29,7 +29,7 @@
  	</div>
  	<div class="add-to-do">
  	<i class="fa fa-plus-circle"></i>
- 	<input type="text" id="input" placeholder="Legg til vare" />
+ 	<input type="text" id="input" placeholder="Legg til oppgave" />
  	</div>
  </div>
 
